5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4146/executions/1863_1296.log
== TEST (2019-07-02 11:04:19) 
-- CODE:
from numpy import *
from numpy.linalg import *

producao = array([[8, 10, 16],
					 [2, 3, 5],
					 [1, 2 ,3]])

horas = array(eval(input("Horas: ")))

horas = horas.T

vet = dot(inv(producao), horas)

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:04:33) 
-- CODE:
from numpy import *
from numpy.linalg import *

producao = array([[8, 10, 16],
					 [2, 3, 5],
					 [1, 2 ,3]])

horas = array(eval(input("Horas: ")))

horas = horas.T

vet = dot(inv(producao), horas)

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:05:09) 
-- CODE:
from numpy import *
from numpy.linalg import *

producao = array([[8, 10, 16],
					 [2, 3, 5],
					 [1, 2 ,3]])

horas = array(eval(input("Horas: ")))

horas = horas.T

vet = round(dot(inv(producao), horas), 1)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:05:13) 
-- CODE:
from numpy import *
from numpy.linalg import *

producao = array([[8, 10, 16],
					 [2, 3, 5],
					 [1, 2 ,3]])

horas = array(eval(input("Horas: ")))

horas = horas.T

vet = round(dot(inv(producao), horas), 1)

print

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:05:19) 
-- CODE:
from numpy import *
from numpy.linalg import *

producao = array([[8, 10, 16],
					 [2, 3, 5],
					 [1, 2 ,3]])

horas = array(eval(input("Horas: ")))

horas = horas.T

vet = round(dot(inv(producao), horas), 1)

print(vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:05:41) 
-- CODE:
from numpy import *
from numpy.linalg import *

producao = array([[8, 10, 16],
					 [2, 3, 5],
					 [1, 2 ,3]])

horas = array(eval(input("Horas: ")))

horas = horas.T

vet = dot(inv(producao), horas)

print(round(vet),1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:05:48) 
-- CODE:
from numpy import *
from numpy.linalg import *

producao = array([[8, 10, 16],
					 [2, 3, 5],
					 [1, 2 ,3]])

horas = array(eval(input("Horas: ")))

horas = horas.T

vet = dot(inv(producao), horas)

print(round(vet),1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:06:04) 
-- CODE:
from numpy import *
from numpy.linalg import *

producao = array([[8, 10, 16],
					 [2, 3, 5],
					 [1, 2 ,3]])

horas = array(eval(input("Horas: ")))

horas = horas.T

vet = dot(inv(producao), horas)

print(vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:06:08) 
-- CODE:
from numpy import *
from numpy.linalg import *

producao = array([[8, 10, 16],
					 [2, 3, 5],
					 [1, 2 ,3]])

horas = array(eval(input("Horas: ")))

horas = horas.T

vet = dot(inv(producao), horas)

print(vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:07:34) 
-- CODE:
from numpy import *
from numpy.linalg import *

producao = array([[8, 10, 16],
					 [2, 3, 5],
					 [1, 2 ,3]])

horas = array(eval(input("Horas: ")))

horas = horas.T

vet = dot(inv(producao), horas)

print("centurion: ", (round(vet[0], 1))	

-- ERROR:
File "XXXX", line 15
    
                                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:07:39) 
-- CODE:
from numpy import *
from numpy.linalg import *

producao = array([[8, 10, 16],
					 [2, 3, 5],
					 [1, 2 ,3]])

horas = array(eval(input("Horas: ")))

horas = horas.T

vet = dot(inv(producao), horas)

print("centurion: ", (round(vet[0], 1))
-- ERROR:
File "XXXX", line 15
    
                                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:07:45) 
-- CODE:
from numpy import *
from numpy.linalg import *

producao = array([[8, 10, 16],
					 [2, 3, 5],
					 [1, 2 ,3]])

horas = array(eval(input("Horas: ")))

horas = horas.T

vet = dot(inv(producao), horas)

print("centurion: ", (round(vet[0], 1))
-- ERROR:
File "XXXX", line 15
    
                                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:07:52) 
-- CODE:
from numpy import *
from numpy.linalg import *

producao = array([[8, 10, 16],
					 [2, 3, 5],
					 [1, 2 ,3]])

horas = array(eval(input("Horas: ")))

horas = horas.T

vet = dot(inv(producao), horas)

print("centurion: ", round(vet[0], 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:07:58) 
-- CODE:
from numpy import *
from numpy.linalg import *

producao = array([[8, 10, 16],
					 [2, 3, 5],
					 [1, 2 ,3]])

horas = array(eval(input("Horas: ")))

horas = horas.T

vet = dot(inv(producao), horas)

print("centurion: ", round(vet[0], 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:10:46) 
-- CODE:
from numpy import *
from numpy.linalg import *

producao = array([[8, 10, 16],
					 [2, 3, 5],
					 [1, 2 ,3]])

horas = array(eval(input("Horas: ")))

horas = horas.T

vet = dot(inv(producao), horas)

print("centurion: ", round(vet[0], 1))
print("tribune: ", round(vet[1], 1))
print("senator: ", round(vet[2], 1))

if(vet[0] == min(vet)):
	print("centurion")
elif(vet[1] == min(vet)):
	print("tribune")
elif(vet[2] == min(vet)):
	print("senator")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:10:53) 
-- CODE:
from numpy import *
from numpy.linalg import *

producao = array([[8, 10, 16],
					 [2, 3, 5],
					 [1, 2 ,3]])

horas = array(eval(input("Horas: ")))

horas = horas.T

vet = dot(inv(producao), horas)

print("centurion: ", round(vet[0], 1))
print("tribune: ", round(vet[1], 1))
print("senator: ", round(vet[2], 1))

if(vet[0] == min(vet)):
	print("centurion")
elif(vet[1] == min(vet)):
	print("tribune")
elif(vet[2] == min(vet)):
	print("senator")
-- EXECUTION TIME:
0.82548
-- TEST CASE 1:
---- input:
[8956,2700,1628]
---- correct output:
centurion: 150.0
tribune: 190.0
senator: 366.0
centurion
---- user output:
centurion:  150.0
tribune:  190.0
senator:  366.0
centurion
-- TEST CASE 2:
---- input:
[24642,7104,4218]
---- correct output:
centurion: 999.0
tribune: 777.0
senator: 555.0
senator
---- user output:
centurion:  999.0
tribune:  777.0
senator:  555.0
senator
-- TEST CASE 3:
---- input:
[19430,5548,3147]
---- correct output:
centurion: 1020.0
tribune: 111.0
senator: 635.0
tribune
---- user output:
centurion:  1020.0
tribune:  111.0
senator:  635.0
tribune
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
